Fix background bleed

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   position: relative;
   background-color: var(--color-light-alt);
+  overflow: hidden;
 }
 
 .App > div:not(.background) {
